# PHAROS

./: .gitignore  CNAME  Instructions.md  README.md  index.html  pyproject.toml  requirements.txt  simulate_loop.py
benchmarks/: benchmark.py  metrics.py
config/: system.yaml
data/calibration/: coupling_matrix.npy  ground_truth_r0.npy  ref_centroids.npy
data/processed/: phase_map_000.npy
data/sim/: generate_kolmogorov_data.py  generate_sim_data.py
export/: centroid_cnn.pt  export_models.py  reconstructor.pt  turbulence_ann.pt
ml/: train_all.py
ml/centroid_cnn/: dataset.py  model.py  train.py
ml/reconstructor/: dataset.py  model.py  train.py
ml/rl_control/: env.py  train.py
ml/turbulence_ann/: dataset.py  model.py  train.py
pharos/: actuator.py  centroid.py  config.py  pipeline_classical.py  preprocess.py  realtime.py  reconstruct.py  slopes.py  turbulence.py  zernike.py
tests/: conftest.py  test_centroid.py  test_preprocess.py  test_reconstruct.py  test_slopes.py  test_turbulence.py
