[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pharos"
version = "0.1.0"
description = "Phase and Hartmann Adaptive Reconstruction with Optimised Sensing"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["pharos*", "ml*", "export*", "benchmarks*"]
